# VelNetServer

./: .gitignore  Cargo.toml  LICENSE  README.md  config.json  config.txt  docker-compose.yaml  install.sh  run.sh  velnet.service
control-panel/: .gitignore  Cargo.toml  Dockerfile  compile_server.sh  config.json  git_pull.sh  onefetch_file.sh  rebuild.bat
control-panel/src/: main.rs  main.rs.bak
control-panel/static/templates/: index.hbs
server/: Cargo.toml  Dockerfile  config.json
server/src/: main.rs
src/: main.rs  main_save.rs
