[package]
name = "control-panel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
handlebars = { version = "4.2.1", features = ["dir_source"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }