[package]
name = "velnet_control_panel"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
handlebars = { version = "4.2.1", features = ["dir_source"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
simplelog = "^0.12.0"
log = "*"
systemctl = "0.1.7"
actix-files = "0.6.1"