[package]
name = "velnet_server"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-std = { version = "1.6", features = ["attributes"]}
futures = "*"
async-notify = "*"
simplelog = "^0.12.0"
log = "*"